--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
+    "popmotion": "^9.3.5",
     "postcss-pxtorem": "^5.1.1",
     "vant": "^2.12.39",
     "vue": "^2.6.11",
